# watchlog

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/watchlog/: __init__.py  api.py  auth.py  bot.py  check_info.py  cli.py  fcm.py  host_info.py  notifications.py  state.py
src/watchlog/checks/: __init__.py  apt_updates.py  disk_space.py  dns_records.py  docker_images.py  fail2ban_stats.py  file_integrity.py  ip_blacklist.py  memory.py  open_ports.py  services.py  ssh_brute.py  ssl_certs.py
src/watchlog/core/: __init__.py  check.py  config.py  runner.py  severity.py
src/watchlog/dashboard/: index.html
src/watchlog/reporters/: __init__.py  base.py  email.py  fcm_push.py  json_file.py  status_file.py  stdout.py  telegram.py
